--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.datasource.password=kyaw
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/securedb
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=none
+
+
+
+
+
+
